<resources>

    <string name="enter_card_number">Enter card number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="zip">ZIP</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="clear">X</string>
    <string name="number_zero">0</string>
    <string name="delete">Delete</string>
    <string name="close">CLOSE</string>
    <string name="use_this_card">USE THIS CARD</string>
    <string name="scan">Scan</string>

</resources>