<?xml version="1.0" encoding="utf-8"?>
<merge>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/Layout_table"
                 android:clickable="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#fff"
                 android:divider="@android:color/darker_gray"
                 android:orientation="vertical"
                 android:showDividers="middle|beginning|end">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_row"
            android:divider="@android:color/darker_gray"
            android:gravity="center"
            android:showDividers="middle">

            <TextView
                android:id="@+id/key_1"
                style="@style/keypad"
                android:text="@string/number_one"/>

            <TextView
                android:id="@+id/key_2"
                style="@style/keypad"
                android:text="@string/number_two"/>

            <TextView
                android:id="@+id/key_3"
                style="@style/keypad"
                android:text="@string/number_three"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:gravity="center"
            android:showDividers="middle">

            <TextView
                android:id="@+id/key_4"
                style="@style/keypad"
                android:text="@string/number_four"/>

            <TextView
                android:id="@+id/key_5"
                style="@style/keypad"
                android:text="@string/number_five"/>

            <TextView
                android:id="@+id/key_6"
                style="@style/keypad"
                android:text="@string/number_six"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:gravity="center"
            android:showDividers="middle">

            <TextView
                android:id="@+id/key_7"
                style="@style/keypad"
                android:text="@string/number_seven"/>

            <TextView
                android:id="@+id/key_8"
                style="@style/keypad"
                android:text="@string/number_eight"/>

            <TextView
                android:id="@+id/key_9"
                style="@style/keypad"
                android:text="@string/number_nine"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:gravity="center"
            android:showDividers="middle">

            <ImageView
                android:id="@+id/key_scan"
                style="@style/backspace"
                android:src="@drawable/ic_action_camera"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:visibility="invisible"
                android:contentDescription="@string/delete"/>

            <TextView
                android:id="@+id/key_0"
                style="@style/keypad"
                android:text="@string/number_zero"/>

            <ImageView
                android:id="@+id/key_delete"
                style="@style/backspace"
                android:src="@drawable/backspace"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/delete"/>
        </TableRow>

    </TableLayout>
</merge>